--- a/hornetq-journal/pom.xml
+++ b/hornetq-journal/pom.xml
@@ -28,6 +28,7 @@
       <dependency>
             <groupId>org.jboss.logmanager</groupId>
             <artifactId>jboss-logmanager</artifactId>
+            <scope>test</scope>
       </dependency>
       <dependency>
          <groupId>org.hornetq</groupId>
