https://bugzilla.redhat.com/show_bug.cgi?id=1014103 log.warn on DLQ and expiry not existent
(cherry picked from commit 0dd79503e427bf8f27973b5585d927464e9e43d6)

--- a/hornetq-server/src/test/resources/logging.properties
+++ b/hornetq-server/src/test/resources/logging.properties
@@ -31,7 +31,7 @@ logger.org.hornetq.core.server=TRACE
 # Root logger level
 logger.level=INFO
 # Root logger handlers
-logger.handlers=FILE,CONSOLE
+logger.handlers=FILE,CONSOLE,TEST
 
 # Console handler configuration
 handler.CONSOLE=org.jboss.logmanager.handlers.ConsoleHandler
@@ -47,6 +47,12 @@ handler.FILE.properties=autoFlush,fileName
 handler.FILE.autoFlush=true
 handler.FILE.fileName=hornetq.log
 handler.FILE.formatter=PATTERN
+
+
+# Console handler configuration
+handler.TEST=org.hornetq.tests.logging.AssertionLoggerHandler
+handler.TEST.level=TRACE
+handler.TEST.formatter=PATTERN
 
 # Formatter pattern configuration
 formatter.PATTERN=org.jboss.logmanager.formatters.PatternFormatter
