--- a/tests/config/logging.properties
+++ b/tests/config/logging.properties
@@ -37,7 +37,7 @@ logger.org.hornetq.tests.integration.level=DEBUG
 logger.org.hornetq.jms.tests.level=INFO
 
 # Root logger handlers
-logger.handlers=CONSOLE
+logger.handlers=CONSOLE,TEST
 #logger.handlers=CONSOLE,FILE
 
 # Console handler configuration
@@ -54,6 +54,11 @@ handler.FILE.properties=autoFlush,fileName
 handler.FILE.autoFlush=true
 handler.FILE.fileName=hornetq.log
 handler.FILE.formatter=PATTERN
+
+# Console handler configuration
+handler.TEST=org.hornetq.tests.logging.AssertionLoggerHandler
+handler.TEST.level=TRACE
+handler.TEST.formatter=PATTERN
 
 # Formatter pattern configuration
 formatter.PATTERN=org.jboss.logmanager.formatters.PatternFormatter
