--- a/hornetq-server/pom.xml
+++ b/hornetq-server/pom.xml
@@ -30,6 +30,11 @@
          <artifactId>jboss-logging</artifactId>
       </dependency>
       <dependency>
+        <groupId>org.jboss.logmanager</groupId>
+        <artifactId>jboss-logmanager</artifactId>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
          <groupId>org.hornetq</groupId>
          <artifactId>hornetq-commons</artifactId>
          <version>${project.version}</version>
