workging around http://youtrack.jetbrains.com/issue/IDEA-106594 This doesn't affect any semantics on tests or code... This helps us when developing on this branch, especially when writing and debugging tests.
(cherry picked from commit f723cd565d8af4b70d2a6a03fe913a732a16dbf4)

--- a/hornetq-rest/pom.xml
+++ b/hornetq-rest/pom.xml
@@ -15,7 +15,7 @@
 
    <properties>
       <hornetq.version>${project.version}</hornetq.version>
-      <hornetq.basedir>${project.parent.basedir}</hornetq.basedir>
+      <hornetq.basedir>${project.basedir}/..</hornetq.basedir>
    </properties>
 
    <dependencies>
