--- a/integration/hornetq-spring-integration/pom.xml
+++ b/integration/hornetq-spring-integration/pom.xml
@@ -27,7 +27,7 @@
    <name>HornetQ Spring Integration</name>
 
    <properties>
-      <hornetq.basedir>${project.parent.basedir}</hornetq.basedir>
+      <hornetq.basedir>${project.basedir}/../..</hornetq.basedir>
    </properties>
 
    <dependencies>
