--- a/integration/hornetq-twitter-integration/pom.xml
+++ b/integration/hornetq-twitter-integration/pom.xml
@@ -14,7 +14,7 @@
    <name>HornetQ Twitter Integration</name>
 
    <properties>
-      <hornetq.basedir>${project.parent.basedir}</hornetq.basedir>
+      <hornetq.basedir>${project.basedir}/../..</hornetq.basedir>
    </properties>
 
    <dependencies>
