--- a/tests/performance-tests/pom.xml
+++ b/tests/performance-tests/pom.xml
@@ -25,7 +25,7 @@
    <name>HornetQ performance Tests</name>
 
    <properties>
-      <hornetq.basedir>${project.parent.parent.basedir}</hornetq.basedir>
+      <hornetq.basedir>${project.basedir}/../..</hornetq.basedir>
    </properties>
 
    <dependencies>
