--- a/hornetq-core-client/pom.xml
+++ b/hornetq-core-client/pom.xml
@@ -14,7 +14,7 @@
    <name>HornetQ Core Client</name>
 
    <properties>
-      <hornetq.basedir>${project.parent.basedir}</hornetq.basedir>
+      <hornetq.basedir>${project.basedir}/..</hornetq.basedir>
    </properties>
 
    <dependencies>
