--- a/hornetq-jms-client/pom.xml
+++ b/hornetq-jms-client/pom.xml
@@ -13,7 +13,7 @@
    <name>HornetQ JMS Client</name>
 
    <properties>
-      <hornetq.basedir>${project.parent.basedir}</hornetq.basedir>
+      <hornetq.basedir>${project.basedir}/..</hornetq.basedir>
    </properties>
 
    <dependencies>
