--- a/hornetq-journal/pom.xml
+++ b/hornetq-journal/pom.xml
@@ -13,7 +13,7 @@
    <name>HornetQ Journal</name>
 
    <properties>
-      <hornetq.basedir>${project.parent.basedir}</hornetq.basedir>
+      <hornetq.basedir>${project.basedir}/..</hornetq.basedir>
    </properties>
 
    <dependencies>
