--- a/hornetq-ra/pom.xml
+++ b/hornetq-ra/pom.xml
@@ -13,7 +13,7 @@
    <packaging>jar</packaging>
 
    <properties>
-      <hornetq.basedir>${project.parent.basedir}</hornetq.basedir>
+      <hornetq.basedir>${project.basedir}/..</hornetq.basedir>
    </properties>
 
    <dependencies>
