--- a/hornetq-service-sar/pom.xml
+++ b/hornetq-service-sar/pom.xml
@@ -13,7 +13,7 @@
    <name>HornetQ JBoss AS4 Integration</name>
 
    <properties>
-      <hornetq.basedir>${project.parent.basedir}</hornetq.basedir>
+      <hornetq.basedir>${project.basedir}/..</hornetq.basedir>
    </properties>
 
    <dependencies>
