--- a/integration/hornetq-jboss-as-integration/pom.xml
+++ b/integration/hornetq-jboss-as-integration/pom.xml
@@ -14,7 +14,7 @@
    <name>HornetQ JBoss AS Integration</name>
 
    <properties>
-      <hornetq.basedir>${project.parent.basedir}</hornetq.basedir>
+      <hornetq.basedir>${project.basedir}/../..</hornetq.basedir>
    </properties>
 
    <dependencies>
