--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -13,7 +13,7 @@
    <packaging>pom</packaging>
 
    <properties>
-      <hornetq.basedir>${project.parent.basedir}</hornetq.basedir>
+      <hornetq.basedir>${project.basedir}/..</hornetq.basedir>
    </properties>
 
    <build>
