--- a/hornetq-protocols/hornetq-amqp-dealer/pom.xml
+++ b/hornetq-protocols/hornetq-amqp-dealer/pom.xml
@@ -43,11 +43,11 @@
          <artifactId>junit</artifactId>
          <scope>test</scope>
       </dependency>
-      <dependency>
+      <!-- <dependency>
          <groupId>org.hornetq</groupId>
          <artifactId>hornetq-commons</artifactId>
          <version>${project.version}</version>
-      </dependency>
+      </dependency> -->
 
       <dependency>
          <groupId>org.apache.qpid</groupId>
