Adding hornetq-tools as a project... this is very helpful for ourselves when dealing with data and support cases.. we can eventually send this to customers, but it's not part of our distribution now
(cherry picked from commit bd85e740282feac4d07d2279d8df8f56371f1fb9)

--- a/pom.xml
+++ b/pom.xml
@@ -436,6 +436,7 @@
             <activeByDefault>true</activeByDefault>
          </activation>
          <modules>
+            <module>hornetq-tools</module>
             <module>hornetq-bootstrap</module>
             <module>hornetq-commons</module>
             <module>hornetq-core-client</module>
