fixing XML import/export test (fix provided by Howard and Clebert)
(cherry picked from commit 96f48a8dee5b4fc836c6c4d74e0f3dea8f07a7c6)

--- a/pom.xml
+++ b/pom.xml
@@ -466,6 +466,7 @@
             <module>hornetq-ra</module>
             <module>hornetq-rest</module>
             <module>hornetq-service-sar</module>
+            <module>hornetq-tools</module>
             <module>hornetq-native</module>
             <module>integration/hornetq-jboss-as-integration</module>
             <module>integration/hornetq-spring-integration</module>
@@ -486,6 +487,7 @@
             <module>hornetq-ra</module>
             <module>hornetq-rest</module>
             <module>hornetq-service-sar</module>
+            <module>hornetq-tools</module>
             <module>hornetq-native</module>
             <module>integration/hornetq-jboss-as-integration</module>
             <module>integration/hornetq-spring-integration</module>
@@ -508,6 +510,7 @@
             <module>hornetq-ra</module>
             <module>hornetq-rest</module>
             <module>hornetq-service-sar</module>
+            <module>hornetq-tools</module>
             <module>integration/hornetq-jboss-as-integration</module>
             <module>integration/hornetq-spring-integration</module>
             <module>integration/hornetq-twitter-integration</module>
@@ -540,6 +543,7 @@
             <module>hornetq-ra</module>
             <module>hornetq-rest</module>
             <module>hornetq-service-sar</module>
+            <module>hornetq-tools</module>
             <module>integration/hornetq-jboss-as-integration</module>
             <module>integration/hornetq-spring-integration</module>
             <module>integration/hornetq-twitter-integration</module>
@@ -567,6 +571,7 @@
             <module>hornetq-ra</module>
             <module>hornetq-rest</module>
             <module>hornetq-service-sar</module>
+            <module>hornetq-tools</module>
             <module>integration/hornetq-jboss-as-integration</module>
             <module>integration/hornetq-spring-integration</module>
             <module>integration/hornetq-twitter-integration</module>
