--- a/hornetq-protocols/hornetq-proton-plug/pom.xml
+++ b/hornetq-protocols/hornetq-proton-plug/pom.xml
@@ -43,6 +43,11 @@
          <version>${project.version}</version>
       </dependency>
       <dependency>
+         <groupId>org.hornetq</groupId>
+         <artifactId>hornetq-amqp-client</artifactId>
+         <version>${project.version}</version>
+      </dependency>
+      <dependency>
          <groupId>org.apache.qpid</groupId>
          <artifactId>proton-j</artifactId>
       </dependency>
