--- a/hornetq-protocols/pom.xml
+++ b/hornetq-protocols/pom.xml
@@ -18,6 +18,7 @@
 
    <modules>
       <module>hornetq-amqp-protocol</module>
+      <module>hornetq-amqp-client</module>
       <module>hornetq-stomp-protocol</module>
       <module>hornetq-openwire-protocol</module>
       <module>hornetq-proton-plug</module>
