--- a/tests/integration-tests/pom.xml
+++ b/tests/integration-tests/pom.xml
@@ -96,6 +96,11 @@
       </dependency>
       <dependency>
          <groupId>org.hornetq</groupId>
+         <artifactId>hornetq-amqp-client</artifactId>
+         <version>${project.version}</version>
+      </dependency>
+      <dependency>
+         <groupId>org.hornetq</groupId>
          <artifactId>hornetq-stomp-protocol</artifactId>
          <version>${project.version}</version>
       </dependency>
