--- a/pom.xml
+++ b/pom.xml
@@ -289,12 +289,12 @@
          <dependency>
             <groupId>org.apache.qpid</groupId>
             <artifactId>proton-j</artifactId>
-            <version>0.8.redhat-001</version>
+            <version>1.0-SNAPSHOT</version>
          </dependency>
          <dependency>
             <groupId>org.apache.qpid</groupId>
             <artifactId>proton-jms</artifactId>
-            <version>0.8.redhat-001</version>
+            <version>1.0-SNAPSHOT</version>
          </dependency>
          <dependency>
             <groupId>org.apache.activemq</groupId>
