--- a/pom.xml
+++ b/pom.xml
@@ -32,13 +32,13 @@
    <properties>
       <netty.version>3.6.10.Final</netty.version>
 
-      <hornetq.version.versionName>2.3.25.SP7</hornetq.version.versionName>
+      <hornetq.version.versionName>2.3.25.SP7.54f1cdec9076d0044e54c46d6b41e1849674f970</hornetq.version.versionName>
       <hornetq.version.majorVersion>2</hornetq.version.majorVersion>
       <hornetq.version.minorVersion>3</hornetq.version.minorVersion>
       <hornetq.version.microVersion>25</hornetq.version.microVersion>
       <hornetq.version.incrementingVersion>123,122</hornetq.version.incrementingVersion>
       <hornetq.version.versionSuffix>SP6</hornetq.version.versionSuffix>
-      <hornetq.version.versionTag>HornetQ_2_3_25_SP7</hornetq.version.versionTag>
+      <hornetq.version.versionTag>HornetQ_2_3_25_SP7.54f1cdec9076d0044e54c46d6b41e1849674f970</hornetq.version.versionTag>
       <HornetQ-Version>
          ${hornetq.version.majorVersion}.${hornetq.version.minorVersion}.${hornetq.version.microVersion}.${hornetq.version.versionSuffix}
          (${hornetq.version.versionName}, ${hornetq.version.incrementingVersion})
