--- a/examples/jms/client-side-load-balancing/pom.xml
+++ b/examples/jms/client-side-load-balancing/pom.xml
@@ -99,7 +99,7 @@
                      <goal>runClient</goal>
                   </goals>
                   <configuration>
-                     <clientClass>org.hornetq.jms.example.ClientSideLoadBalancingExample</clientClass>
+                     <clientClass>org.hornetq.jms.example.ThirdTest</clientClass>
                      <args>
                         <param>jnp://localhost:1099</param>
                         <param>jnp://localhost:1199</param>
